k8s/base/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: onboarding
spec:
  replicas: 1
  selector:
    app: onboarding
  template:
    metadata:
      labels:
        app: onboarding
    spec:
      containers:
      - name: onboarding
        image: KUSTOMIZE
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
      serviceAccountName: onboarding-serviceaccount
      automountServiceAccountToken: True
