k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onboarding
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: onboarding
        image: "localhost:5000/cci-moc/openshift-acct-mgt:latest"
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: quota-vol
            mountPath: /app/quota
            readOnly: true
      volumes:
        - name: quota-vol
          configMap:
            name: openshift-quota-definition
      serviceAccountName: onboarding-serviceaccount
      automountServiceAccountToken: true
