k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onboarding
spec:
  ports:
  - name: 443-https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: onboarding
