k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: onboarding-route
spec:
  host: APP_URL  # Overlaid
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: onboarding
